--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, minimal-ui">
     <meta content="yes" name="apple-mobile-web-app-capable">
@@ -11,19 +11,19 @@
     <meta name="x5-fullscreen" content="true">
     <meta name="keywords" content="">
     <meta name="description" content="">
-    <link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="/static/css/main.css">
-    <script src="/static/js/main.js"></script>
-    <!-- <script src="https://cdn.bootcss.com/zepto/1.2.0/zepto.js"></script> -->
-    <title>gulpcli</title>
+		<title>alilo</title>
+    <link rel="shortcut icon" href="static/favicon.ico" type="image/x-icon">
+		<link href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="static/css/main.css">
+		<link rel="stylesheet" type="text/css" href="static/css/index.css"/>
   </head>
   <body>
 
     <div id="main">
-      @@include('header.html', {
-        "title": "indexPage"
-      })
-      <img src="/static/images/gulp.png" />
+			<!-- 头部 -->
+      @@include('header.html')
     </div>
+		<script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
+		<script src="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
   </body>
 </html>
