--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
 				</div>
 				<div class="home-product-rigth-bottom product-box" data-aos="zoom-in-up">
 					<div class="home-product-rigth-img">
-						<img src="static/images/home_photo_03.png" alt="">
+						<img src="./static/images/home_photo_03.png" alt="">
 					</div>
 					<div class="home-product-rigth-text product-text">
 						<p></p>
@@ -116,26 +116,26 @@
 				</div>
 			</div>
 		</div>
-		<div class="videoBox" style="display: none;">
-			<video id="my-video" class="video-js" controls preload="auto" width="740" height="400" poster="" data-setup="{}">
-				<source src="http://vjs.zencdn.net/v/oceans.mp4" type="video/mp4">
-			</video>
+		<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+		 aria-hidden="true">
+			<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+				<div class="modal-content">
+					<video id="my-video" class="video-js" controls preload="auto" width="1000" height="600" p data-setup="{}">
+						<source src="http://vjs.zencdn.net/v/oceans.mp4" type="video/mp4">
+					</video>
+				</div>
+			</div>
 		</div>
 	</section>
-
 	<!-- 头部 -->
 	@@include('footer.html')
 </div>
 <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
-<script src="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+<!-- <script src="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script> -->
+<script src="https://cdn.bootcss.com/twitter-bootstrap/3.4.1/js/bootstrap.min.js"></script>
 <script src="static/js/main.js" type="text/javascript" charset="utf-8"></script>
-<script src="static/js/aos.js" type="text/javascript" charset="utf-8"></script>
-<script src="static/js/video.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="static/lib/js/video.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="static/lib/js/aos.js" type="text/javascript" charset="utf-8"></script>
 <script src="static/js/main.js" type="text/javascript" charset="utf-8"></script>
-<script type="text/javascript">
-	AOS.init({
-		duration: 1200
-	});
-</script>
 </body>
 </html>
