--- a/src/index.html
+++ b/src/index.html
@@ -8,21 +8,37 @@
 	<!-- 轮播 -->
 	<section>
 		<div class="banner">
-			<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+			<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
 				<div class="carousel-inner" role="listbox">
-					<div class="carousel-item active">
+					<div class="item active">
+						<img class="img-responsive" src="static/images/home_banner_01.png" />
 						<div class="carousel-caption">
-							<h3>BT Story Teller G6</h3>
+							<h1>BT Story Teller G6</h1>
 							<span>LEARN MORE</span>
 						</div>
 					</div>
-				</div>
-				<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-					<span class="sr-only">Previous</span>
-				</a>
-				<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-					<span class="carousel-control-next-icon" aria-hidden="true"></span>
+					<div class="item">
+						<img class="img-responsive" src="static/images/home_banner_02.png" />
+						<div class="carousel-caption">
+							<h3>alilo honey bunny G6</h3>
+							<h1>Thousands of mother's choices <br />
+								good partner in childhood</h1>
+							<span>LEARN  MORE</span>
+						</div>
+					</div>
+					<!-- <div class="item">
+						<img class="img-responsive" src="static/images/home_banner_01.png" />
+						<div class="carousel-caption">
+							<h1>轮播3的标题</h1>
+							<p>这里是轮播图3的说明</p>
+						</div>
+					</div> -->
+				</div> <!-- Controls -->
+				<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+					<span class="glyphicon glyphicon-chevron-left"></span>
+					<span class="sr-only">Previous</span> </a>
+				<a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+					<span class="glyphicon glyphicon-chevron-right"></span>
 					<span class="sr-only">Next</span>
 				</a>
 			</div>
@@ -34,7 +50,7 @@
 		<div class="home-product" id="product">
 			<div class="home-product-left product-box" data-aos="zoom-in-left">
 				<div class="home-product-left-img">
-					<img src="static/images/home_photo_01.png" alt="">
+					<img src="static/images/home_photo_G6.png" alt="">
 				</div>
 				<div class="home-product-left-text product-text">
 					<p>Zabawka Roku 2018!</p>
@@ -61,7 +77,7 @@
 				</div>
 				<div class="home-product-rigth-bottom product-box" data-aos="zoom-in-up">
 					<div class="home-product-rigth-img">
-						<img src="./static/images/home_photo_03.png" alt="">
+						<img src="static/images/home_photo_P1.png" alt="">
 					</div>
 					<div class="home-product-rigth-text product-text">
 						<p></p>
@@ -86,27 +102,27 @@
 						<div class="home-video-mode">
 							<img src="static/images/home_player_icon.png">
 						</div>
-						<img src="static/images/home_photo_02.png" alt="">
+						<img src="static/images/G6.png" alt="">
 					</div>
-					<span>Alilo Honey Bunny Edutainment For Children</span>
+					<p>Alilo Honey Bunny Edutainment For Children</p>
 				</div>
 				<div class="home-video-itme">
 					<div class="home-video-mode-img" data-id="2">
 						<div class="home-video-mode">
 							<img src="static/images/home_player_icon.png">
 						</div>
-						<img src="static/images/home_photo_02.png" alt="">
+						<img src="static/images/R1.png" alt="">
 					</div>
-					<span>Baby Rattles - Smarty Shake & Tell Play Doh</span>
+					<p>Baby Rattles - Smarty Shake & Tell Play Doh</p>
 				</div>
 				<div class="home-video-itme">
 					<div class="home-video-mode-img" data-id="3">
 						<div class="home-video-mode">
 							<img src="static/images/home_player_icon.png">
 						</div>
-						<img src="static/images/home_photo_02.png" alt="">
+						<img src="static/images/M7.png" alt="">
 					</div>
-					<span>Baby Rattles - Smarty Shake & Tell Play Doh</span>
+					<p>alilo explorer programming story teller M7</p>
 				</div>
 			</div>
 		</div>
@@ -121,15 +137,12 @@
 			</div>
 		</div>
 	</section>
-	<!-- 头部 -->
+	<!-- 底部 -->
 	@@include('footer.html')
 </div>
-<script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
-<script src="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
-<!-- <script src="https://cdn.bootcss.com/twitter-bootstrap/3.4.1/js/bootstrap.min.js"></script> -->
-<script src="static/js/main.js" type="text/javascript" charset="utf-8"></script>
-<script src="static/lib/js/video.min.js" type="text/javascript" charset="utf-8"></script>
-<script src="static/lib/js/aos.js" type="text/javascript" charset="utf-8"></script>
-<script src="static/js/main.js" type="text/javascript" charset="utf-8"></script>
+<script src="./static/js/main.js" type="text/javascript" charset="utf-8"></script>
+<script src="./static/lib/js/video.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="./static/lib/js/aos.js" type="text/javascript" charset="utf-8"></script>
+<script src="./static/js/main.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
