--- a/src/brand.html
+++ b/src/brand.html
@@ -13,26 +13,332 @@
 					<img src="static/images/brand_headbg.png" alt="">
 				</div>
 				<div class="contact-top-text">
-					<p>More about</p>
-					<h3>GROWTH HISTORY</h3>
+					<p id="brandtextP">ABOUT alilo</p>
+					<h3 id="brandtextH3"></h3>
 				</div>
 			</div>
 		</section>
 		<section>
 			<div class="contact-tab">
-				<ul class="nav nav-tabs">
-					<li role="presentation"><a href="#">About Us</a></li>
-					<li role="presentation"><a href="#">Milestone</a></li>
-					<li role="presentation"><a href="#">Our Honor</a></li>
+				<ul class="nav nav-tabs" id="nav-tabs">
+					<li data-toggle="tab" class="active" data-type="0"><a href="#box1">About Us</a></li>
+					<li data-toggle="tab" data-type="1"><a href="#box2">Milestone</a></li>
+					<li data-toggle="tab" data-type="2"><a href="#box3">Our Honor</a></li>
 				</ul>
+			</div>
+			<div class="tab-content" id="tabBox">
+				<div id="box1" class="nav-content">
+					<div class="about-box">
+						<div class="about-box-top">
+							<div class="about-box-top-left">
+								<h3>Meet alilo！</h3>
+								<p>alilo was founded in 2010, and its founder believes that learning by playing has<br />
+									a potentially profound impact on children's development. </p>
+								<P>Given the trend of contemporary development to integrate science with education, <br />
+									alilo has been focusing on high quality and innovative design for 9 years.</P>
+								<h4>China's smart early education industry leader</h4>
+								<P>alilo accompanies with 30 million+ children to grow up.</P>
+								<ul>
+									<li>8,400+ children watch alilo IP original contents every minute</li>
+									<li>The cumulative view counts have exceeded 40 billion<br />
+										(including those on mobile devices)</li>
+								</ul>
+							</div>
+							<div class="about-box-top-right">
+								<img src="static/images/brand_aboutus_photo.png">
+							</div>
+							<div class="clear"></div>
+						</div>
+						<div class="about-box-bottom">
+							<ul>
+								<li class="col-xs-3"><img src="static/images/brand_aboutus_icon01.png" alt="">
+									<h4>Our values</h4>
+									<p>Center on customers, based on <br />
+										endeavors, persist in hard work</p>
+								</li>
+								<li class="col-xs-3"><img src="static/images/brand_aboutus_icon02.png" alt="">
+									<h4>Our vision</h4>
+									<p>Every child has alilo products, to be <br />
+										the best children's industry group</p>
+								</li>
+								<li class="col-xs-3"><img src="static/images/brand_aboutus_icon03.png" alt="">
+									<h4>Our mission</h4>
+									<p>Accompany children to grow up <br>
+										healthily and happily</p>
+								</li>
+								<li class="col-xs-3"><img src="static/images/brand_aboutus_icon04.png" alt="">
+									<h4>Our goal</h4>
+									<p>Do our best in making every product for <br>
+										children’s health, happiness and growth</p>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div id="box2" style="display: none;" class="nav-content">
+					<img src="static/images/brand_milestone.png">
+				</div>
+				<div id="box3"  style="display: none;" class="nav-content">
+					<div class="Honor-time">
+						<ul>
+							<li><a href="#2019">2019</a></li>
+							<li><a href="#2018">2018</a></li>
+							<li><a href="#2017">2017</a></li>
+							<li><a href="#2016">2016</a></li>
+							<li><a href="#2015">2015</a></li>
+							<li><a href="#2014">2014</a></li>
+						</ul>
+					</div>
+					<div class="honor-content">
+						<div id="2019">
+							<h3>2019</h3>
+							<ul>
+								<li class="row">
+									<div class="honor-box">
+										<div class="col-md-4 honor-left">
+											<img src="static/images/M7.png">
+											<p>alilo M7</p>
+										</div>
+										<div class="col-md-8 honor-right">
+											<div class="col-lg-4 honor-right-img">
+												<img src="static/images/2019_M7.png">
+												<p>Japanese Toy Award Excellence Award</p>
+											</div>
+										</div>
+									</div>
+								</li>
+								<li class="row">
+									<div class="honor-box">
+										<div class="col-xs-4 honor-left">
+											<img src="static/images/G9.png">
+											<p>alilo New ID G9</p>
+										</div>
+										<div class="col-xs-8 honor-right">
+											<div class="honor-right-img col-lg-4">
+												<img src="static/images/2019_G9+J7.png">
+												<p>"Reddot Design Award"</p>
+											</div>
+										</div>
+									</div>
+								</li>
+								<li class="row">
+									<div class="honor-box">
+										<div class="col-xs-4 honor-left">
+											<img src="static/images/J7.png">
+											<p>alilo New ID J7</p>
+										</div>
+										<div class="col-xs-8 honor-right">
+											<div class="honor-right-img col-lg-4">
+												<img src="static/images/2019_G9+J7.png">
+												<p>"Reddot Design Award"</p>
+											</div>
+										</div>
+									</div>
+								</li>
+							</ul>
+						</div>
+						<div id="2018">
+							<h3>2018</h3>
+							<ul>
+								<li class="row">
+									<div class="honor-box">
+										<div class="col-xs-4 honor-left">
+											<img src="static/images/G6.png">
+											<p>alilo honey bunny G6</p>
+										</div>
+										<div class="col-xs-8 honor-right">
+											<div class="honor-right-img col-lg-4">
+												<img src="static/images/2018_G6.png">
+												<p>Toy of the Year Award</p>
+											</div>
+										</div>
+									</div>
+								</li>
+							</ul>
+						</div>
+						<div id="2017">
+							<h3>2017</h3>
+							<ul>
+								<li class="row">
+									<div class="honor-box">
+										<div class="col-xs-4 honor-left">
+											<img src="static/images/G6.png">
+											<p>alilo honey bunny G6</p>
+										</div>
+										<div class="col-xs-8 honor-right">
+											<div class="honor-right-img col-lg-4">
+												<img src="static/images/2017_G6.png">
+												<p>The KidZone 2017 quality mark Award</p>
+											</div>
+										</div>
+									</div>
+								</li>
+								<li class="row">
+									<div class="honor-box">
+										<div class="col-xs-4 honor-left">
+											<img src="static/images/R1.png">
+											<p>alilo smarty R1</p>
+										</div>
+										<div class="col-xs-8 honor-right">
+											<div class="honor-right-img col-lg-4">
+												<img src="static/images/2017_R1.png ">
+												<p>Golden Belly Award</p>
+											</div>
+										</div>
+									</div>
+								</li>
+							</ul>
+						</div>
+						<div id="2016">
+							<h3>2016</h3>
+							<ul>
+								<li class="row">
+									<div class="honor-box">
+										<div class="col-xs-4 honor-left">
+											<img src="static/images/R1.png">
+											<p>alilo smarty R1</p>
+										</div>
+										<div class="col-xs-8 honor-right">
+											<div class="honor-right-img col-xs-4">
+												<img src="static/images/2016_R1_01.png">
+												<p>Japanese Toy Award Excellence Award</p>
+											</div>
+											<div class="honor-right-img col-xs-4">
+												<img src="static/images/2016_R1_02.png">
+												<p>Japanese Toy Award Excellence Award</p>
+											</div>
+											<div class="honor-right-img col-xs-4">
+												<img src="static/images/2016_R1_03.png">
+												<p>Japanese Toy Award Excellence Award</p>
+											</div>
+										</div>
+									</div>
+								</li>
+								<li class="row">
+									<div class="honor-box">
+										<div class="col-xs-4 honor-left">
+											<img src="static/images/V8.png">
+											<p>alilo cool bunny V8</p>
+										</div>
+										<div class="col-xs-8 honor-right">
+											<div class="honor-right-img col-xs-4">
+												<img src="static/images/2016_V8.png">
+												<p>Parents' favorite products Tillywing Award</p>
+											</div>
+										</div>
+									</div>
+								</li>
+								<li class="row">
+									<div class="honor-box">
+										<div class="col-xs-4 honor-left">
+											<img src="static/images/G6.png">
+											<p>alilo honey bunny G6</p>
+										</div>
+										<div class="col-xs-8 honor-right">
+											<div class="honor-right-img col-xs-4">
+												<img src="static/images/2016_G6.png">
+												<p>Liked & Wanted Award</p>
+											</div>
+										</div>
+									</div>
+								</li>
+								<li class="row">
+									<div class="honor-box">
+										<div class="col-xs-4 honor-left">
+											<img src="static/images/F3.png">
+											<p>alilo honey bunny F3</p>
+										</div>
+										<div class="col-xs-8 honor-right">
+											<div class="honor-right-img col-xs-4">
+												<img src="static/images/2016_F3_01.png">
+												<p>Mom's choice Award</p>
+											</div>
+										</div>
+									</div>
+								</li>
+							</ul>
+						</div>
+						<div id="2015">
+							<h3>2015</h3>
+							<ul>
+								<li class="row">
+									<div class="honor-box">
+										<div class="col-xs-4 honor-left">
+											<img src="static/images/A2.png">
+											<p>alilo buddy bunny A2</p>
+										</div>
+										<div class="col-xs-8 honor-right">
+											<div class="honor-right-img col-xs-4">
+												<img src="static/images/2015_A2_01.png">
+												<p>Family Choice Award</p>
+											</div>
+											<div class="honor-right-img col-xs-4">
+												<img src="static/images/2015_A2_02.png">
+												<p>Prima baby & pregnancy Award</p>
+											</div>
+										</div>
+									</div>
+								</li>
+								<li class="row">
+									<div class="honor-box">
+										<div class="col-xs-4 honor-left">
+											<img src="static/images/G6.png">
+											<p>alilo honey bunny G6</p>
+										</div>
+										<div class="col-xs-8 honor-right">
+											<div class="honor-right-img col-xs-4">
+												<img src="static/images/2015_G6_01.png">
+												<p>Toy of the Year 2015</p>
+											</div>
+											<div class="honor-right-img col-xs-4">
+												<img src="static/images/2015_G6_02.png">
+												<p>Kid's Biz Award</p>
+											</div>
+										</div>
+									</div>
+								</li>
+							</ul>
+						</div>
+						<div id="2014">
+							<h3>2014</h3>
+							<ul>
+								<li class="row">
+									<div class="honor-box">
+										<div class="col-xs-4 honor-left">
+											<img src="static/images/G6.png">
+											<p>alilo honey bunny G6</p>
+										</div>
+										<div class="col-xs-8 honor-right">
+											<div class="honor-right-img col-xs-4">
+												<img src="static/images/2014_G6_01.png">
+												<p>Best Toy Award</p>
+											</div>
+											<div class="honor-right-img col-xs-4">
+												<img src="static/images/2014_G6_02.png">
+												<p>Oppenheim toy portfolio Award</p>
+											</div>
+											<div class="honor-right-img col-xs-4">
+												<img src="static/images/2014_G6_03.png">
+												<p>Award from the NGO and the KOPD Award</p>
+											</div>
+										</div>
+									</div>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section>
+			<div class="goTop" style="display: none;">
+				<img src="static/images/back_normal.png" alt="">
 			</div>
 		</section>
 	</div>
 	<!-- 底部 -->
 	@@include('footer.html')
 </div>
-<script src="./static/js/main.js" type="text/javascript" charset="utf-8"></script>
-<script src="./static/lib/js/video.min.js" type="text/javascript" charset="utf-8"></script>
 <script src="./static/lib/js/aos.js" type="text/javascript" charset="utf-8"></script>
 <script src="./static/js/main.js" type="text/javascript" charset="utf-8"></script>
 </body>
