--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
 	<!-- 产品 -->
 	<section>
 		<div class="home-product" id="product">
-			<div class="home-product-left product-box" data-aos="zoom-in-left">
+			<div class="home-product-left product-box">
 				<div class="home-product-left-img">
 					<img src="static/images/home_photo_G6.png" alt="">
 				</div>
@@ -62,7 +62,7 @@
 				</div>
 			</div>
 			<div class="home-product-rigth">
-				<div class="home-product-rigth-top product-box" data-aos="zoom-in-up">
+				<div class="home-product-rigth-top product-box">
 					<div class="home-product-rigth-img">
 						<img src="static/images/home_photo_02.png" alt="">
 					</div>
@@ -75,7 +75,7 @@
 						<span>Learn more</span>
 					</div>
 				</div>
-				<div class="home-product-rigth-bottom product-box" data-aos="zoom-in-up">
+				<div class="home-product-rigth-bottom product-box">
 					<div class="home-product-rigth-img">
 						<img src="static/images/home_photo_P1.png" alt="">
 					</div>
@@ -102,7 +102,7 @@
 						<div class="home-video-mode">
 							<img src="static/images/home_player_icon.png">
 						</div>
-						<img src="static/images/G6.png" alt="">
+						<img src="static/images/G6-video.png" alt="">
 					</div>
 					<p>Alilo Honey Bunny Edutainment For Children</p>
 				</div>
@@ -111,7 +111,7 @@
 						<div class="home-video-mode">
 							<img src="static/images/home_player_icon.png">
 						</div>
-						<img src="static/images/R1.png" alt="">
+						<img src="static/images/R1-video.png" alt="">
 					</div>
 					<p>Baby Rattles - Smarty Shake & Tell Play Doh</p>
 				</div>
@@ -120,7 +120,7 @@
 						<div class="home-video-mode">
 							<img src="static/images/home_player_icon.png">
 						</div>
-						<img src="static/images/M7.png" alt="">
+						<img src="static/images/M7-video.png" alt="">
 					</div>
 					<p>alilo explorer programming story teller M7</p>
 				</div>
@@ -140,7 +140,6 @@
 	<!-- 底部 -->
 	@@include('footer.html')
 </div>
-<script src="./static/js/main.js" type="text/javascript" charset="utf-8"></script>
 <script src="./static/lib/js/video.min.js" type="text/javascript" charset="utf-8"></script>
 <script src="./static/lib/js/aos.js" type="text/javascript" charset="utf-8"></script>
 <script src="./static/js/main.js" type="text/javascript" charset="utf-8"></script>
