--- a/src/contact.html
+++ b/src/contact.html
@@ -23,8 +23,8 @@
 			</div>
 		</section>
 		<section>
-			<div class="contact-main">
-				<div class="contact-main-left">
+			<div class="contact-main row">
+				<div class="contact-main-left col-lg-6 col-md-6 col-sm-12">
 					<p>Fill out our Support Form to contact us regarding your Product.</p>
 					<div class="contact-main-input row">
 						<div class="input-group col-lg-5">
@@ -46,7 +46,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="contact-main-rigth">
+				<div class="contact-main-rigth col-lg-6 col-md-6 col-sm-12">
 					<div class="contact-main-rigth-box">
 						<div class="contact-main-rigth-info">
 							<h3>Contact information</h3>
