--- a/src/brand.html
+++ b/src/brand.html
@@ -29,7 +29,7 @@
 			<div class="tab-content" id="tabBox">
 				<div id="box1" class="nav-content">
 					<div class="about-box">
-						<div class="about-box-top">
+						<div class="about-box-top row">
 							<div class="about-box-top-left">
 								<h3>Meet alilo！</h3>
 								<p>alilo was founded in 2010, and its founder believes that learning by playing has<br />
@@ -50,23 +50,23 @@
 							<div class="clear"></div>
 						</div>
 						<div class="about-box-bottom">
-							<ul>
-								<li class="col-xs-3"><img src="static/images/brand_aboutus_icon01.png" alt="">
+							<ul class="row">
+								<li class="col-lg-3 col-md-4 col-sm-6"><img src="static/images/brand_aboutus_icon01.png" alt="">
 									<h4>Our values</h4>
 									<p>Center on customers, based on <br />
 										endeavors, persist in hard work</p>
 								</li>
-								<li class="col-xs-3"><img src="static/images/brand_aboutus_icon02.png" alt="">
+								<li class="col-lg-3 col-md-6 col-sm-6"><img src="static/images/brand_aboutus_icon02.png" alt="">
 									<h4>Our vision</h4>
 									<p>Every child has alilo products, to be <br />
 										the best children's industry group</p>
 								</li>
-								<li class="col-xs-3"><img src="static/images/brand_aboutus_icon03.png" alt="">
+								<li class="col-lg-3 col-md-6 col-sm-6"><img src="static/images/brand_aboutus_icon03.png" alt="">
 									<h4>Our mission</h4>
 									<p>Accompany children to grow up <br>
 										healthily and happily</p>
 								</li>
-								<li class="col-xs-3"><img src="static/images/brand_aboutus_icon04.png" alt="">
+								<li class="col-lg-3 col-md-6 col-sm-6"><img src="static/images/brand_aboutus_icon04.png" alt="">
 									<h4>Our goal</h4>
 									<p>Do our best in making every product for <br>
 										children’s health, happiness and growth</p>
