--- a/src/index.html
+++ b/src/index.html
@@ -14,16 +14,16 @@
 						<img class="img-responsive" src="static/images/home_banner_01.png" />
 						<div class="carousel-caption">
 							<h1>BT Story Teller G6</h1>
-							<span>LEARN MORE</span>
+							<!-- <span><a href="products-details.html?model=G6">LEARN  MORE</a></span> -->
 						</div>
 					</div>
 					<div class="item">
 						<img class="img-responsive" src="static/images/home_banner_02.png" />
 						<div class="carousel-caption">
-							<h3>alilo honey bunny G6</h3>
+							<h3>alilo G6</h3>
 							<h1>Thousands of mother's choices <br />
 								good partner in childhood</h1>
-							<span>LEARN  MORE</span>
+							<!-- <span><a href="products-details.html?model=G6">LEARN  MORE</a></span> -->
 						</div>
 					</div>
 					<!-- <div class="item">
@@ -53,12 +53,12 @@
 					<img src="static/images/home_photo_G6.png" alt="">
 				</div>
 				<div class="home-product-left-text product-text">
-					<p>Zabawka Roku 2018!</p>
+					<!-- <p>Zabawka Roku 2018!</p> -->
 					<p>Alilo Honey Bunny G6</p>
 					<p>Storyteller preloaded 60+ nursery rhyme, lullaby song, bedtime story ,<br />
 						safety chewable teether ears with 7 colorful lights ,buit-in<br />
 						rechargeable battery,no-angular design.</p>
-					<span>Learn more</span>
+					<span><a href="products-details.html?model=G6">Learn more</a></span>
 				</div>
 			</div>
 			<div class="home-product-rigth">
@@ -72,7 +72,7 @@
 						<p>its exclusive patent design is winning global recognition, and <br />
 							it has been exported to Europe, America and Russia since it <br />
 							came on the market 4 years ago.</p>
-						<span>Learn more</span>
+						<span><a href="products-details.html?model=R1">Learn more</a></span>
 					</div>
 				</div>
 				<div class="home-product-rigth-bottom product-box">
@@ -86,7 +86,7 @@
 						<p>Interaction to inspire musicality, belly drum, paw piano,<br />
 							lullaby melody, bed time stories,family game,<br />
 							learning color from luminous ears</p>
-						<span>Learn more</span>
+						<span><a href="products-details.html?model=P1">Learn more</a></span>
 					</div>
 				</div>
 			</div>
