第一版修改

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 					<div class="item active">
 						<img class="img-responsive" src="static/images/home_banner_01.png" />
 						<div class="carousel-caption">
-							<h1>BT Story Teller G6</h1>
+							<!-- <h1>BT Story Teller G6</h1> -->
 							<!-- <span><a href="products-details.html?model=G6">LEARN  MORE</a></span> -->
 						</div>
 					</div>
@@ -54,7 +54,7 @@
 				</div>
 				<div class="home-product-left-text product-text">
 					<!-- <p>Zabawka Roku 2018!</p> -->
-					<p>Alilo Honey Bunny G6</p>
+					<h1>Alilo Honey Bunny G6</h1>
 					<p>Storyteller preloaded 60+ nursery rhyme, lullaby song, bedtime story ,<br />
 						safety chewable teether ears with 7 colorful lights ,buit-in<br />
 						rechargeable battery,no-angular design.</p>
